fix aslide for officeOnline by set overflow property

--- a/src/style/components/pptPlayer.css
+++ b/src/style/components/pptPlayer.css
@@ -1,4 +1,8 @@
 .pptPlayer{
-    width:100%;
     height:80vh;
+    overflow: hidden;
+}
+.ppt{
+    width:100%;
+    height:100%;
 }
